[project]
name = "prepkat"
version = "0.0.0"
description = "A repository of useful reoutines for preparing MeerKAT data for processing."
authors = [
    {name = "Jonathan Kenyon",email = "jonathan.simon.kenyon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
