[project]
name = "prepkat"
version = "0.0.0"
description = "A repository of useful reoutines for preparing MeerKAT data for processing."
authors = [
    {name = "Jonathan Kenyon",email = "jonathan.simon.kenyon@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "python-casacore>=3.6.1",
    "tbump>=6.10.0,<=6.11.0",
    "typer>=0.15.1",
    "numba>=0.61.0",
    "typing-extensions>=4.12.2",
]

[project.scripts]
katflip = "prepkat.main:feed_flip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prepkat"]
